# ScanReconstruction

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
FernRelocLib/: CMakeLists.txt
FernRelocLib/include/FernRelocLib/: FernConservatory.hpp  PixelUtils.hpp  PoseDatabase.hpp  RelocDatabase.hpp  Relocaliser.hpp
FernRelocLib/src/: FernConservatory.cpp  PoseDatabase.cpp  RelocDatabase.cpp
Tracker/: CMakeLists.txt
Tracker/include/Tracker/: cameraParams.h  pixelUtils.h  tracker.h
Tracker/src/: tracker.cpp
VisualisationEngine/: CMakeLists.txt
VisualisationEngine/include/VisualisationEngine/: RenderState.h  RenderUtils.h  TrackingState.h  View.h  VisualisationEngine.h  VoxelBlockHash.h
VisualisationEngine/src/: VisualisationEngine.cpp
cmake/: CompilerOptions.cmake
include/: Allcator.h  Allocator.h  Constants.h  DepthTracker.h  Encoder.h  GlobalSettings.h  Integrator.h  KeyframeSystem.h  LocalMap.h  LocalMapManager.h  MemoryAllocator.h  Octree.h  Pipeline.h  PixelUtils.h  Raycaster.h  RenderedView.h  Scene.h  SubmapManager.h  TrackingState.h  Types.h  Utils.h  Viewer.h  VoxelHash.h  coarseMatcher.h  coreEngine.h  fsr_allocator.h  hp_utils.h  hpc_utils.h  imuKinematicObserver.h  interpolate_utils.h  keyframe.h  localMap.h  localMapManager.h  local_map.h  local_map_manager.h  pixel_utils.h  renderState.h  scene.h  settings.h  synchronizer.h  (+7 more)
src/: Allcator.cpp  Allocator.cpp  DepthTracker.cpp  Integrator.cpp  KeyframeSystem.cpp  LocalMapManager.cpp  Pipeline.cpp  Raycaster.cpp  Scene.cpp  coarseMatcher.cpp  coreEngine.cpp  imuKinematicObserver.cpp  keyframe.cpp  local_map.cpp  local_map_manager.cpp  synchronizer.cpp  tracker.cpp  visualisation_engine.cpp
test/: collect_data.cpp  compute_pointcloud.cpp  test_hp_module.cpp  test_imuKinematicObserver.cpp  test_keyframe.cpp  test_relocaiser.cpp  test_scene.cpp  test_subsample.cpp  test_tracker.cpp  test_visualizer.cpp
